Retail Lending-Production/src/objects/Test_Bank_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <label>Applicant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pvt Ltd Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <picklist>
            <picklistValues>
                <fullName>AXIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard chartered Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kotak Mahindra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edelweiss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deutsche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deutsche post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Bulls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ing Vysa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Base_Rate__c</fullName>
        <label>Base Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salaried professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed non professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home maker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fixed_Period__c</fullName>
        <label>Fixed Period</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Max__c</fullName>
        <label>Loan Amount(Max)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Min__c</fullName>
        <label>Loan Amount(Min)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Product__c</fullName>
        <label>Loan Product</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease rental discounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan transfer : Home loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan transfer : Loan against property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan transfer : Lease rental discounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against shares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Riders__c</fullName>
        <label>Loan Riders</label>
        <picklist>
            <picklistValues>
                <fullName>Topup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Tenure_Months__c</fullName>
        <label>Loan Tenure (Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Payment_charges__c</fullName>
        <label>Pre Payment charges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processing_Fee_Functions__c</fullName>
        <label>Processing Fee Operators</label>
        <picklist>
            <picklistValues>
                <fullName>Which ever is greater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Which ever id lesser</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processing_Fees__c</fullName>
        <label>Processing Fees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processing_Fees_p__c</fullName>
        <label>Processing Fees%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Property_Category__c</fullName>
        <label>Property Category</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Details__c</fullName>
        <label>Property Details</label>
        <picklist>
            <picklistValues>
                <fullName>Builder under construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>self construction on own land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land purchase+Self construction on the land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension/Renovation of our own home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_of_Interest__c</fullName>
        <label>Rate of Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Residency_Status__c</fullName>
        <label>Residency Status</label>
        <picklist>
            <picklistValues>
                <fullName>Resident Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Resident Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign National of Indian origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shippe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rider_loans_loading__c</fullName>
        <label>Rider loans loading %</label>
        <picklist>
            <picklistValues>
                <fullName>.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Test Bank Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bank_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loan_Product__c</columns>
        <columns>Base_Rate__c</columns>
        <columns>Rate_of_Interest__c</columns>
        <columns>Loan_Amount_Min__c</columns>
        <columns>Loan_Amount_Max__c</columns>
        <columns>Fixed_Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Bank Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Bank Rates</pluralLabel>
    <recordTypes>
        <fullName>Overdraft_Fixed</fullName>
        <active>true</active>
        <label>Overdraft Fixed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Overdraft_Floating</fullName>
        <active>true</active>
        <label>Overdraft Floating</label>
    </recordTypes>
    <recordTypes>
        <fullName>Overdraft_Semi_Fixed</fullName>
        <active>true</active>
        <label>Overdraft Semi-Fixed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Fixed</fullName>
        <active>true</active>
        <label>Standard Fixed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Floating</fullName>
        <active>true</active>
        <label>Standard Floating</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Semi_Fixed</fullName>
        <active>true</active>
        <label>Standard Semi-Fixed</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>